--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,105 +20,124 @@
 
     <%- include('header.ejs') %>
 
-    <section class="menu">
+        <section class="menu">
 
-        <div class="container"><br>
-            <h2 style="text-align: center;">DRINKS</h2><br>
-            <hr>
-            <h2 style="text-align: center;">SIGNATURE COFFEE</h2>
-            <div class="row row-cols-1 row-cols-md-3 g-4 p-4 justify-content-center">            
-            <% menu.forEach(menuDocument => { %>
-                <% if (menuDocument.Signature) { %>
-                    <% menuDocument.Signature.forEach(item => { %>
-                        <div class="col">
-                            <div class="card h-100">
-                                <img src="./media/<%= item.menuImage %>" class="img-fluid" alt="Caution T-Shirt (Black)">
-                                <div class="card-body">
-                                    <h5 class="card-title"><%= item.menuName %></h5>
-                                    <p class="card-text">PHP <%= item.price %></p>
+            <div class="container"><br>
+                <h2 style="text-align: center; font-size: 50px; font-family: 'Playfair Display', serif; font-weight: 900; color: #752329;">DRINKS</h2><br>
+                <hr>
+                <h2 style="text-align: center; font-family: 'Playfair Display', serif; font-weight: 600;">SIGNATURE COFFEE</h2>
+                <div class="row row-cols-1 row-cols-md-3 g-4 p-4 justify-content-center">
+                    <% menu.forEach(menuDocument => { %>
+                        <% if (menuDocument.Signature) { %>
+                            <% menuDocument.Signature.forEach(item => { %>
+                                <div class="col">
+                                    <div class="card h-100">
+                                        <img src="./media/<%= item.menuImage %>" class="img-fluid" alt="Caution T-Shirt (Black)">
+                                        <div class="card-body">
+                                            <h5 class="card-title">
+                                                <%= item.menuName %>
+                                            </h5>
+                                            <p class="card-text">PHP
+                                                <%= item.price %>
+                                            </p>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
-                    <% }) %>
-                <% } %>
-            <% }) %>
+                                <% }) %>
+                                    <% } %>
+                                        <% }) %>
+                </div>
+
+                <br>
+                <hr>
+                <h2 style="text-align: center; font-family: 'Playfair Display', serif; font-weight: 600;">NON-COFFEE</h2>
+                <div class="row row-cols-1 row-cols-md-3 g-4 p-4 justify-content-center">
+                    <% menu.forEach(menuDocument => { %>
+                        <% if (menuDocument.Non_Coffee) { %>
+                            <% menuDocument.Non_Coffee.forEach(item => { %>
+                                <div class="col">
+                                    <div class="card h-100">
+                                        <img src="./media/<%= item.menuImage %>" class="img-fluid" alt="Caution T-Shirt (Black)">
+                                        <div class="card-body">
+                                            <h5 class="card-title">
+                                                <%= item.menuName %>
+                                            </h5>
+                                            <p class="card-text">PHP
+                                                <%= item.price %>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <% }) %>
+                                    <% } %>
+                                        <% }) %>
+                </div>
+
+                <br><br><br>
+                <h2 style="text-align: center; font-size: 50px; font-family: 'Playfair Display', serif; font-weight: 900; color: #752329;">FOODS</h2>
+                <br>
+                <hr>
+                <h2 style="text-align: center; font-family: 'Playfair Display', serif; font-weight: 600;">BEST SELLERS</h2>
+                <div class="row row-cols-1 row-cols-md-3 g-4 p-4 justify-content-center">
+                    <% menu.forEach(menuDocument => { %>
+                        <% if (menuDocument.Best_Sellers) { %>
+                            <% menuDocument.Best_Sellers.forEach(item => { %>
+                                <div class="col">
+                                    <div class="card h-100">
+                                        <img src="./media/<%= item.menuImage %>" class="img-fluid" alt="Caution T-Shirt (Black)">
+                                        <div class="card-body">
+                                            <h5 class="card-title">
+                                                <%= item.menuName %>
+                                            </h5>
+                                            <p class="card-text">PHP
+                                                <%= item.price %>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <% }) %>
+                                    <% } %>
+                                        <% }) %>
+                </div>
+
+                <br>
+                <hr>
+                <h2 style="text-align: center; font-family: 'Playfair Display', serif; font-weight: 600;">SANDWICHES</h2>
+                <div class="row row-cols-1 row-cols-md-3 g-4 p-4 justify-content-center">
+                    <% menu.forEach(menuDocument => { %>
+                        <% if (menuDocument.Sandwiches) { %>
+                            <% menuDocument.Sandwiches.forEach(item => { %>
+                                <div class="col">
+                                    <div class="card h-100">
+                                        <img src="./media/<%= item.menuImage %>" class="img-fluid" alt="Caution T-Shirt (Black)">
+                                        <div class="card-body">
+                                            <h5 class="card-title">
+                                                <%= item.menuName %>
+                                            </h5>
+                                            <p class="card-text">PHP
+                                                <%= item.price %>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <% }) %>
+                                    <% } %>
+                                        <% }) %>
+                </div>
             </div>
 
-            <br><hr>
-            <h2 style="text-align: center;">NON-COFFEE</h2>
-            <div class="row row-cols-1 row-cols-md-3 g-4 p-4 justify-content-center">            
-                <% menu.forEach(menuDocument => { %>
-                    <% if (menuDocument.Non_Coffee) { %>
-                        <% menuDocument.Non_Coffee.forEach(item => { %>
-                            <div class="col">
-                                <div class="card h-100">
-                                    <img src="./media/<%= item.menuImage %>" class="img-fluid" alt="Caution T-Shirt (Black)">
-                                    <div class="card-body">
-                                        <h5 class="card-title"><%= item.menuName %></h5>
-                                        <p class="card-text">PHP <%= item.price %></p>
-                                    </div>
-                                </div>
-                            </div>
-                        <% }) %>
-                    <% } %>
-                <% }) %>
-            </div>
+        </section>
 
-            <br><br><br>
-            <h2 style="text-align: center;">FOODS</h2>
-            <br><hr>
-            <h2 style="text-align: center;">BEST SELLERS</h2>
-            <div class="row row-cols-1 row-cols-md-3 g-4 p-4 justify-content-center">            
-                <% menu.forEach(menuDocument => { %>
-                    <% if (menuDocument.Best_Sellers) { %>
-                        <% menuDocument.Best_Sellers.forEach(item => { %>
-                            <div class="col">
-                                <div class="card h-100">
-                                    <img src="./media/<%= item.menuImage %>" class="img-fluid" alt="Caution T-Shirt (Black)">
-                                    <div class="card-body">
-                                        <h5 class="card-title"><%= item.menuName %></h5>
-                                        <p class="card-text">PHP <%= item.price %></p>
-                                    </div>
-                                </div>
-                            </div>
-                        <% }) %>
-                    <% } %>
-                <% }) %>
-            </div>  
-            
-            <br>
-            <hr>
-            <h2 style="text-align: center;">SANDWICHES</h2>
-            <div class="row row-cols-1 row-cols-md-3 g-4 p-4 justify-content-center">            
-                <% menu.forEach(menuDocument => { %>
-                    <% if (menuDocument.Sandwiches) { %>
-                        <% menuDocument.Sandwiches.forEach(item => { %>
-                            <div class="col">
-                                <div class="card h-100">
-                                    <img src="./media/<%= item.menuImage %>" class="img-fluid" alt="Caution T-Shirt (Black)">
-                                    <div class="card-body">
-                                        <h5 class="card-title"><%= item.menuName %></h5>
-                                        <p class="card-text">PHP <%= item.price %></p>
-                                    </div>
-                                </div>
-                            </div>
-                        <% }) %>
-                    <% } %>
-                <% }) %>
-            </div>  
-        </div>            
+        <%- include('footer.ejs') %>
 
-    </section>
+            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-    <%- include('footer.ejs') %>
-
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-    <script>
-        document.getElementById('home').removeAttribute("class", 'active');
-        document.getElementById('home').setAttribute("class", "nav-link")
-        document.getElementById('products').setAttribute("class", 'nav-link active');
-    </script>
+            <script>
+                document.getElementById('home').removeAttribute("class", 'active');
+                document.getElementById('home').setAttribute("class", "nav-link")
+                document.getElementById('products').setAttribute("class", 'nav-link active');
+            </script>
 </body>
+
 </html>
