--- a/views/merch.ejs
+++ b/views/merch.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,54 +20,67 @@
 
     <%- include('header.ejs') %>
 
-    <section class="merch">
-        <div class="container">
-            <br>
-            <h2 style="text-align: center;">MERCHANDISE</h2>
-            <div class="row row-cols-1 row-cols-md-3 g-4 p-4 justify-content-center">
+        <section class="merch">
+            <div class="container">
+                <br>
+                <h2 style="text-align: center; font-size: 50px; font-family: 'Playfair Display', serif; font-weight: 900; color: #752329;">MERCHANDISE</h2>
+                <div class="row row-cols-1 row-cols-md-3 g-4 p-4 justify-content-center">
 
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="./media/<%= merch[0].merchImage %>" class="img-fluid" alt="Caution T-Shirt (Black)">
-                        <div class="card-body">
-                            <h5 class="card-title"><%= merch[0].merchName %></h5>
-                            <p class="card-text">PHP <%= merch[0].price %></p>
+                    <div class="col">
+                        <div class="card h-100">
+                            <img src="./media/<%= merch[0].merchImage %>" class="img-fluid" alt="Caution T-Shirt (Black)">
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    <%= merch[0].merchName %>
+                                </h5>
+                                <p class="card-text">PHP
+                                    <%= merch[0].price %>
+                                </p>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="./media/<%= merch[2].merchImage %>" class="img-fluid" alt="Caution T-Shirt (Black)">
-                        <div class="card-body">
-                            <h5 class="card-title"><%= merch[2].merchName %></h5>
-                            <p class="card-text">PHP <%= merch[2].price %></p>
+                    <div class="col">
+                        <div class="card h-100">
+                            <img src="./media/<%= merch[2].merchImage %>" class="img-fluid" alt="Caution T-Shirt (Black)">
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    <%= merch[2].merchName %>
+                                </h5>
+                                <p class="card-text">PHP
+                                    <%= merch[2].price %>
+                                </p>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="./media/<%= merch[1].merchImage %>" class="img-fluid" alt="Caution T-Shirt (Black)">
-                        <div class="card-body">
-                            <h5 class="card-title"><%= merch[1].merchName %></h5>
-                            <p class="card-text">PHP <%= merch[1].price %></p>
+                    <div class="col">
+                        <div class="card h-100">
+                            <img src="./media/<%= merch[1].merchImage %>" class="img-fluid" alt="Caution T-Shirt (Black)">
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    <%= merch[1].merchName %>
+                                </h5>
+                                <p class="card-text">PHP
+                                    <%= merch[1].price %>
+                                </p>
+                            </div>
                         </div>
                     </div>
-                </div>
 
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <%- include('footer.ejs') %>
+        <%- include('footer.ejs') %>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script>
-        document.getElementById('home').removeAttribute("class", 'active');
-        document.getElementById('home').setAttribute("class", "nav-link")
-        document.getElementById('products').setAttribute("class", 'nav-link active');
-    </script>
+            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+            <script>
+                document.getElementById('home').removeAttribute("class", 'active');
+                document.getElementById('home').setAttribute("class", "nav-link")
+                document.getElementById('products').setAttribute("class", 'nav-link active');
+            </script>
 </body>
+
 </html>
