--- a/views/merch.ejs
+++ b/views/merch.ejs
@@ -66,7 +66,7 @@
     <script>
         document.getElementById('home').removeAttribute("class", 'active');
         document.getElementById('home').setAttribute("class", "nav-link")
-        document.getElementById('products').setAttribute("class", 'nav-link active');
+        document.getElementById('products').setAttribute("class", 'nav-link dropdown-toggle active');
     </script>
 </body>
 </html>
